attempted fix on mobile page height

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,5 +26,6 @@
   .project-container {
     height: 100vh;
     max-height: -webkit-fill-available;
+    height: 100dvh;
   }
 }
